Fixed POM build problems with dependencies, duplicate classes, new coding styles, deprecated API's